[package]
name = "advanced-gossip"
version = "0.0.1"
edition = "2021"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
description = "extended iroh-gossip topics."
license = "MIT"
repository = "https://github.com/rustonbsd/advanced-gossip"
readme = "README.md"
keywords = ["gossip", "iroh", "pubsub", "networking"]
categories = ["network-programming"]

[dependencies]
iroh = "0.31"
iroh-gossip = { version = "0.31.0" }
iroh-topic-tracker = { version = "0.1.11" }
tokio = { version="1",features = ["full"] }
anyhow = "1"
rand = { version = "0.9", default-features = false, features = [
    "std_rng",
    "os_rng",
    "thread_rng"
] }
rand_core = { version = "0.6.4" }
serde = "1"
serde_json = "1"
bytes = { version = "1.7", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
ed25519-dalek-hpke = "0.0.3"
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
futures-lite = "2"
z32 = "1"
sha2 = "0.10"
tracing = "0.1"
tokio-stream = "0.1"
futures-concurrency = "7.6.3"

# Optional dependencies

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[features]
default = []


[profile.dev]
opt-level = 0
features = []

[profile.release]
opt-level = 3
lto = true
panic = "abort"
features = []
